@@ -67,6 +67,7 @@ use_project_multimedia = no
 use_project_vhost = yes
 use_ratings = yes
 user_registration_restricted = no
+user_notification_on_activation = no
 use_scm = yes
 use_shell = yes
 use_snippet = yes
