@@ -6,7 +6,8 @@
  * email.
  *
  * Copyright 1999-2001 (c) VA Linux Systems
- * Copyright 2010 (c) Franck Villaume
+ * Copyright 2010, Franck Villaume - Capgemini
+ * Copyright 2012, Franck Villaume - TrivialDev
  *
  * This file is part of FusionForge. FusionForge is free software;
  * you can redistribute it and/or modify it under the terms of the
@@ -63,6 +64,10 @@ if (getStringFromRequest('submit')) {
 
 	if (!$u->setStatus('A')) {
 		exit_error( _('Error while activiting account').': '.$u->getErrorMessage(),'my');
+	} else {
+		if (forge_get_config('user_notification_on_activation')) {
+			$u->setAdminNotification();
+		}
 	}
 
 	session_redirect("/account/first.php");
